--- a/source/sass/_custom.scss
+++ b/source/sass/_custom.scss
@@ -101,7 +101,9 @@
     }
   }
   .e-titles {
-    // position: absolute;
+    position: absolute;
+    margin: 0;
+    padding: 0;
     bottom: 100px;
     width: 100%;
     padding: 20px;
@@ -136,7 +138,7 @@
     padding: 10px;
     .e-description-title {
       color: rgba($black, .4);
-      line-height: .9;
+      line-height: 1.5;
       padding-left: 0;
       text-transform: uppercase;
           font-weight: 400;
