--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -7568,7 +7568,7 @@ textarea {
   /* 2 */ }
 
 .b-top-nav.m-transparent {
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.3);
   color: white;
   width: 100%;
   position: absolute;
@@ -7598,7 +7598,15 @@ textarea {
       max-height: 300px; } }
 
 #b-homepage .b-top-section {
-  background-image: url(/img/temp-backgrounds/temp1.jpeg); }
+  background-image: url(/img/banners/ddcj-index.jpg); }
+  #b-homepage .b-top-section .e-shade {
+    pointer-events: none;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.2)); }
 
 #b-homepage h2 {
   font-size: 50px;
@@ -7623,15 +7631,6 @@ textarea {
   height: 75vh;
   position: relative;
   color: white; }
-  .b-surveys-page .b-top-section .e-shade,
-  #b-homepage .b-top-section .e-shade {
-    pointer-events: none;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.8)); }
   .b-surveys-page .b-top-section .e-main-title,
   #b-homepage .b-top-section .e-main-title {
     font-size: 2.6rem;
@@ -7658,7 +7657,7 @@ textarea {
   padding: 0;
   bottom: 20px;
   width: 100%;
-  padding: 20px; }
+  padding: 30px; }
   .b-surveys-page .e-titles h3,
   #b-homepage .e-titles h3 {
     text-transform: uppercase;
