--- a/source/templates/surveys/0172f53c49038b6053b56a0f545fa150-empirical-criminal-justice-researcher-survey.html
+++ b/source/templates/surveys/0172f53c49038b6053b56a0f545fa150-empirical-criminal-justice-researcher-survey.html
@@ -14,7 +14,7 @@
 <div class='b-surveys-page'>
 
 
-<div class="b-top-section" style='background-image: url(./img/temp-backgrounds/{{image}})'>
+<div class="b-top-section" style='background-image: url(./img/banners/{{image}})'>
   <div class="row expanded">
       <div class="e-shade"></div>
       <hgroup class="e-titles">
