--- a/source/templates/surveys/22668d35838b947202d9069ceb8986f1-the-arnold-foundation-skills-survey.html
+++ b/source/templates/surveys/22668d35838b947202d9069ceb8986f1-the-arnold-foundation-skills-survey.html
@@ -14,7 +14,7 @@
 <div class='b-surveys-page'>
 
 
-<div class="b-top-section" style='background-image: url(./img/temp-backgrounds/{{image}})'>
+<div class="b-top-section" style='background-image: url(./img/banners/{{image}})'>
   <div class="row expanded">
       <div class="e-shade"></div>
       <hgroup class="e-titles">
