--- a/source/templates/surveys/29baf3a17a6b1ae77e4f83c9354a07bb-the-cjcc-survey.html
+++ b/source/templates/surveys/29baf3a17a6b1ae77e4f83c9354a07bb-the-cjcc-survey.html
@@ -14,7 +14,7 @@
 <div class='b-surveys-page'>
 
 
-<div class="b-top-section" style='background-image: url(./img/temp-backgrounds/{{image}})'>
+<div class="b-top-section" style='background-image: url(./img/banners/{{image}})'>
   <div class="row expanded">
       <div class="e-shade"></div>
       <hgroup class="e-titles">
