--- a/source/templates/index.html
+++ b/source/templates/index.html
@@ -2,7 +2,7 @@
 {% block main %}
 <div id="b-homepage">
 
-  <div class="b-top-section">
+  <div class="b-top-section" style="background-image: url(/img/banners/ddcj-index.jpg)">
     <div class="row expanded">
         <div class="e-shade"></div>
         <hgroup class="e-titles">
