--- a/source/sass/_custom.scss
+++ b/source/sass/_custom.scss
@@ -2,6 +2,39 @@
 // place site specific sass into individual files like this one as needed for the design,
 // and @import in styles.scss
 
+
+$ddcj-1: #68678f; 
+$ddcj-2: #6291a3; 
+$ddcj-3: #7298af;
+$ddcj-4: #656395;
+$ddcj-5: #39dfc7;
+
+.m-ddcj-purple {
+  background-color: $ddcj-1;
+  color: white;
+}
+
+.m-dark-teal {
+  background-color: $ddcj-2;
+  color: white;
+}
+
+.m-ddcj-blue {
+  background-color: $ddcj-3;
+  color: white;
+}
+
+.m-dark-purple {
+  background-color: $ddcj-4;
+  color: white;
+}
+
+.m-teal {
+  background-color: $ddcj-5;
+  color: white;
+}
+
+
 // BASE
 .b-top-nav.m-transparent {
     background-color: rgba(0, 0, 0, 0.3);
